# redis-log-processor

./: Containerfile  Makefile  README.md  analyze_logs.py  config.yml  docker-compose.yml  generate_fixtures.py  main.py  pyproject.toml
.github/workflows/: publish-docker.yml
